2014-01-20  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config/aarch64/aarch64-linux.h (GLIBC_DYNAMIC_LINKER): Expand
	loader name using mbig-endian.
	(LINUX_TARGET_LINK_SPEC): Pass linker -m flag.

2014-01-20  James Greenhalgh  <james.greenhalgh@arm.com>

	* doc/invoke.texi (-march): Clarify documentation for AArch64.
	(-mtune): Likewise.
	(-mcpu): Likewise.

2014-01-20  Tejas Belagod  <tejas.belagod@arm.com>

	* config/aarch64/aarch64-protos.h
	(aarch64_cannot_change_mode_class_ptr): Declare.
	* config/aarch64/aarch64.c (aarch64_cannot_change_mode_class,
	aarch64_cannot_change_mode_class_ptr): New.
	* config/aarch64/aarch64.h (CANNOT_CHANGE_MODE_CLASS): Change to call
	backend hook aarch64_cannot_change_mode_class.

2014-01-20  James Greenhalgh  <james.greenhalgh@arm.com>

	* common/config/aarch64/aarch64-common.c
	(aarch64_handle_option): Don't handle any option order logic here.
	* config/aarch64/aarch64.c (aarch64_parse_arch): Do not override
	selected_cpu, warn on architecture version mismatch.
	(aarch64_override_options): Fix parsing order for option strings.

2014-01-20  Jan-Benedict Glaw  <jbglaw@lug-owl.de>
	    Iain Sandoe  <iain@codesourcery.com>

	PR bootstrap/59496
	* config/rs6000/darwin.h (ADJUST_FIELD_ALIGN): Fix unused variable
	warning.  Amend comment to reflect current functionality.

2014-01-20  Richard Biener  <rguenther@suse.de>

	PR middle-end/59860
	* builtins.c (fold_builtin_strcat): Remove case better handled
	by tree-ssa-strlen.c.

2014-01-20  Alan Lawrence  <alan.lawrence@arm.com>

	* config/aarch64/aarch64.opt
	(mcpu, march, mtune): Make case-insensitive.

2014-01-20  Jakub Jelinek  <jakub@redhat.com>

	PR target/59880
	* config/i386/i386.c (ix86_avoid_lea_for_addr): Return false
	if operands[1] is a REG or ZERO_EXTEND of a REG.

2014-01-19  Jan Hubicka  <jh@suse.cz>

	* varasm.c (compute_reloc_for_constant): Use targetm.binds_local_p.

2014-01-19  John David Anglin  <danglin@gcc.gnu.org>
