@@ -18160,17 +18160,16 @@ ix86_avoid_lea_for_addr (rtx insn, rtx operands[])
     return false;
 
   /* The "at least two components" test below might not catch simple
-     *mov[sd]i_internal or *zero_extendsidi2 insns if parts.base is
-     non-NULL and parts.disp is const0_rtx as the only components in
-     the address, e.g. if the register is %rbp or %r13.  As this
-     test is much cheaper and moves or zero extensions are the common
-     case, do this check first.  */
+     move or zero extension insns if parts.base is non-NULL and parts.disp
+     is const0_rtx as the only components in the address, e.g. if the
+     register is %rbp or %r13.  As this test is much cheaper and moves or
+     zero extensions are the common case, do this check first.  */
   if (REG_P (operands[1])
-      || (GET_CODE (operands[1]) == ZERO_EXTEND
+      || (SImode_address_operand (operands[1], VOIDmode)
 	  && REG_P (XEXP (operands[1], 0))))
     return false;
 
-  /* Check it is correct to split here.  */
+  /* Check if it is OK to split here.  */
   if (!ix86_ok_to_clobber_flags (insn))
     return false;
 
